[gd_scene load_steps=6 format=3 uid="uid://cyh67pqghsn3n"]

[ext_resource type="Theme" uid="uid://dwof7m2ye3tjh" path="res://scenes/default_theme.tres" id="1_4kk41"]
[ext_resource type="Script" path="res://scripts/ui/game_menu.gd" id="1_fh5b1"]
[ext_resource type="Texture2D" uid="uid://cmq3arf61ax4f" path="res://textures/ui/menu_panel.png" id="1_yt0u8"]
[ext_resource type="PackedScene" uid="uid://ccwu3rknnn1jt" path="res://scenes/ui/settings_menu.tscn" id="4_l61q4"]
[ext_resource type="PackedScene" uid="uid://c58frru7780pf" path="res://scenes/ui/level_select_menu.tscn" id="5_cbdtm"]

[node name="Menu" type="Control"]
process_mode = 3
visible = false
top_level = true
z_index = 1
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fh5b1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="MenuPanel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -114.0
offset_right = 64.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yt0u8")
patch_margin_left = 4
patch_margin_top = 16
patch_margin_right = 4
patch_margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -68.0
offset_right = 51.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Campaign" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Quit")
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_right = NodePath("../Save")
focus_previous = NodePath("../Quit")
theme = ExtResource("1_4kk41")
keep_pressed_outside = true
text = "CAMPAIGN"

[node name="Save" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Campaign")
theme = ExtResource("1_4kk41")
disabled = true
keep_pressed_outside = true
text = "SAVE/LOAD"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../Quit")
focus_next = NodePath("../Quit")
theme = ExtResource("1_4kk41")
keep_pressed_outside = true
text = "SETTINGS"

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Settings")
focus_neighbor_top = NodePath("../Settings")
focus_neighbor_right = NodePath("../Campaign")
focus_neighbor_bottom = NodePath("../Campaign")
focus_next = NodePath("../Campaign")
focus_previous = NodePath("../Settings")
theme = ExtResource("1_4kk41")
theme_override_colors/font_color = Color(0.74902, 0.376471, 0.376471, 1)
theme_override_colors/font_pressed_color = Color(0.501961, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.501961, 0, 0, 1)
keep_pressed_outside = true
text = "QUIT"

[node name="LevelSelect" parent="." instance=ExtResource("5_cbdtm")]
visible = false
layout_mode = 1

[node name="Settings" parent="." instance=ExtResource("4_l61q4")]
visible = false
layout_mode = 1

[connection signal="menu_closed" from="." to="LevelSelect" method="_on_menu_closed"]
[connection signal="menu_closed" from="." to="Settings" method="_on_menu_closed"]
[connection signal="pressed" from="VBoxContainer/Campaign" to="." method="_on_campaign_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_button_pressed"]
